--- a/ProyectoExBD/css/normalize.css
+++ b/ProyectoExBD/css/normalize.css
@@ -1,6 +1,6 @@
 *{
     margin: 0px;
-    border: opx;
+    border: 0px;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
