--- a/ProyectoExBD/css/boton.css
+++ b/ProyectoExBD/css/boton.css
@@ -1,17 +1,16 @@
 .boton{
     width: 10rem;
     height: 2rem;
-   
     color: var(--text-color2);
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 0.1rem solid var(--main-color5);
     overflow: hidden;
     position: relative;
-    
-
-
+    margin: 1rem;
+    box-shadow: 0.2rem 0.2rem 0.25rem rgba(0,0,0,0.75);
+    cursor: pointer;
+    border-radius: 0.2rem;
 }
 
 .boton::after{
@@ -19,28 +18,28 @@
     position: absolute;
     height: 100%;
     width: 300%;
-    background: linear-gradient(45deg, var(--main-color1) 50%,var(--main-color5) 50%);
+    background: linear-gradient(45deg, var(--main-color1) 50%,
+     var(--main-color5) 50%);
     top: 0;
     left: -200%;
     z-index: 0;
-    transition: all 1s ease;               
-
+    transition: all 0.75s ease;
 }
-                                                                                         
+
 .boton:hover::after{
     left: 0%;
-} 
+}
 
 .boton span{
     z-index: 2;
 }
 
 .boton p{
-    font-size: 1,2rem;
+    font-size: 1.2rem;
     font-weight: bolder;
     z-index: 2;
-
 }
+
 .boton:hover p{
-    color:var(--text-color);
+    color: var(--text-color);
 }
